* Task/Bug Id: Bug 21175 - When we try to click on "Assign" button for GSID, progress icon is coming below the page. This is on IE 8 browser * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27953

--- a/software/caTissue/modules/core/src/main/web/css/catissue_suite.css
+++ b/software/caTissue/modules/core/src/main/web/css/catissue_suite.css
@@ -865,12 +865,16 @@ color: #000000;
     background: #a7a3a3 url("../images/ajax-loader.gif") no-repeat center;
     width:100%;
     height:100%;
-    position:fixed;
+    position:absolute;
     top:0;
     left:0;
     z-index:4000;
     opacity:0.8;
     display:none;
+    zoom: 1;    
+    filter: alpha(opacity = 80);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+    
 }
 
 /* StyleSheet for Container */
